package org.bits.pilani.homely.enums;

public enum OrderStatus {
    PENDING,
    CONFIRMED,
    PREPARING,
    READY,
    COMPLETED,
    OUT_FOR_DELIVERY,
    CANCELLED
}